--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -54,7 +54,9 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -66,7 +68,9 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -97,7 +101,9 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -154,7 +160,9 @@
   {
    "cell_type": "code",
    "execution_count": 85,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import os\n",
@@ -178,7 +186,9 @@
   {
    "cell_type": "code",
    "execution_count": 86,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -195,7 +205,9 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -271,7 +283,7 @@
     "\n",
     "The process is describeed in the following image:\n",
     "<table class=\"image\">\n",
-    "    <caption align=\"bottom\" style=\"width: 750px;\">I iteratively do binary clustering image (based on their embedded vectors) until groups of front and back view images are roughly separated.</caption>\n",
+    "    <caption align=\"bottom\" style=\"width: 750px;\">Iteratively binary cluster images (based on their embedded vectors) until groups of front and back view images are roughly separated.</caption>\n",
     "    <img src=\"hierarchical_clustering.png\" alt=\"Drawing\" style=\"width: 1000px;\"/>\n",
     "</table>"
    ]
@@ -280,7 +292,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "After doing clustering for 3 times as in the previous image, I get the following group of images:\n",
+    "The reason for binary clustering is due to my assumption after looking at the data. I think it can be separated by to front or back view images. After doing clustering for 3 times as in the previous image, I get the following group of images:\n",
     "\n",
     "<table class=\"image\">\n",
     "    <caption align=\"bottom\" style=\"width: 500px;\">Images from the first group. Most of the images seem to be the front views of flukes</caption>\n",
@@ -309,7 +321,9 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -433,7 +447,9 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -519,7 +535,9 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -583,7 +601,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Since this is not a common classification, rather it is a one-shot learning problem, I would go with siamese network approach. I would use ResNet50 and perform transfer learning to estimate a similarity function between a chosen pair of whales.\n"
+    "Since this is not a common classification, rather it is a one-shot learning problem, I would go with siamese network approach. I would use ResNet50 and perform transfer learning to estimate a similarity function between a chosen pair of images. The rough design of the model is shown below:\n"
    ]
   },
   {
@@ -610,7 +628,14 @@
     "Steps in preprocessing are as follows:\n",
     "* Resize the image so that the bigger dimension is equal to 224\n",
     "* Pad the smaller dimension to make it square (224x224)\n",
-    "* 224x224 is used for the sake of my GPU's memory and also to be identical to the input shape of the pretrained ResNet"
+    "* 224x224 is used for the sake of my GPU's memory and also to be identical to the input shape of the pretrained ResNet\n",
+    "\n",
+    "An example of a preprocessed image is shown below:\n",
+    "\n",
+    "<table class=\"image\">\n",
+    "    <caption align=\"bottom\" style=\"width: 350px;\">A preprocessed image (resized and zero-padded)</caption>\n",
+    "    <img src=\"preprocessed.png\" alt=\"Drawing\" style=\"width: 300px;\"/>\n",
+    "</table>"
    ]
   },
   {
@@ -655,7 +680,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def identification_model(image_shape, model_num, weight_path=None):\n",
@@ -751,8 +778,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# For speed, all data (variable data, annotation, view_prediction) are already loaded in memory\n",
@@ -796,24 +825,114 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Setup"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "To evaluate the model in accordance with the competition, I use mean averaged precision (MAP) as a metric.\n",
     "I separate the dataset of 9,850 samples into:\n",
     "* 70% for training (6,895 samples) and\n",
-    "* 30% for testing (2,955 samples)"
+    "* 30% for testing (2,955 samples)\n",
+    "\n",
+    "The code I use for evaluation is shown below:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
-   "source": []
+   "source": [
+    "# Calculate top-k mean averaged precision\n",
+    "def calculate_map(true_ids, predicted_ids):\n",
+    "    # Sum averaged precision over all samples\n",
+    "    mean_averaged_precision = 0\n",
+    "    num_samples = len(true_ids) # The number of test samples\n",
+    "    k = len(list(predicted_ids[0])) # k is from Top-k prediction\n",
+    "    count=0\n",
+    "    for i in range(num_samples):\n",
+    "        tp = 0 # Number of true positive\n",
+    "        fp = 0 # Number of false positive\n",
+    "        \n",
+    "        # Calculate averaged precision\n",
+    "        true_id = true_ids[i] # Label id\n",
+    "        averaged_precision = 0\n",
+    "        for j in range(k):\n",
+    "            pred_id = predicted_ids[i][j]\n",
+    "            tp += true_id == pred_id\n",
+    "            fp += true_id != pred_id\n",
+    "            precision_at_j = tp/(tp+fp)\n",
+    "            recall_change_at_j = 0\n",
+    "            if true_id == pred_id:\n",
+    "                recall_change_at_j = 1/(j+1)\n",
+    "                averaged_precision += precision_at_j * recall_change_at_j # Update averaged precision\n",
+    "                break # If correct then stop and go to the next sample\n",
+    "                \n",
+    "        # Calculate the mean of averaged precisions\n",
+    "        mean_averaged_precision += averaged_precision/num_samples\n",
+    "    return mean_averaged_precision"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Hyperparameters:\n",
+    "\n",
+    "* Optimizer – Adam\n",
+    "* Learning rate – 0.001\n",
+    "* Batch size – 16 + 16 (the sequential drawn one and the randomly drawn one)\n",
+    "\n",
+    "#### Hardware setting:\n",
+    "\n",
+    "* GPU: NVIDIA GTX 1080 ti 16GB x1\n",
+    "* RAM: DDR4 16GB\n",
+    "* CPU: Ryzen 5 1600 6-cores 3.2 Ghz\n",
+    "\n",
+    "To be honest, I only have time to train the network for one epoch (around 10+ hours). Thus, the result should not be very promising, but, yeah I only have 2 days :)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Result"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Results for each configuration is shown in the table belolw:\n",
+    "\n",
+    "|  Configuration | Mean averaged precision (MAP) |\n",
+    "|:-----:|:-----------------------------:|\n",
+    "| Top-1 |                        9.95 % |\n",
+    "| Top-3 |                         10.27 % |\n",
+    "| Top-5 |                         10.36 % |"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Well, the results is really poor LOL but this is also due to the time limitation. The full code can be found at my repository:\n",
+    "https://github.com/PavitFaaiz/whale-identification But, yeah, right now the code is quite messy. I hope I have more time to clean it.\n",
+    "\n",
+    "# Anddddddddd finished just in time! (1:18 pm. Sat ~ 1:15 pm. Mon)\n",
+    "### Lastly, thank you for the task and opportunity. I hope you like my work and I'm looking forward to working with you."
+   ]
   }
  ],
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python3"
   },
@@ -827,7 +946,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
